Food-homepage with css design

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <hr>
     <h3 align="center" >Website layout</h3>
     <div class="layout">
-        <div class="header">Header</div>
+        <div class="header"></div>
         <div class="nav-part"></div>
         <div class="main_area"></div>
         <div class="footer"></div>
