--- a/food_homepage.html
+++ b/food_homepage.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header-section">
         <div class="logo">
-            <h1><i> Logo </i></h1>
+            <h1><i> Furrion </i></h1>
         </div>
         <div class="nav">
             <ul>
